--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,18 @@
 .header {
-    max-width: 880px;
-    min-height: 74px;
-    margin: 0 200px 0;
-    border-bottom: 1px solid #545454;
+  max-width: 880px;
+  min-height: 74px;
+  margin: 0 200px 0;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 @media screen and (max-width: 1100px) {
-    .header {
-        margin: 0 70px 0;
-    }
+  .header {
+    margin: 0 70px 0;
+  }
 }
 @media screen and (max-width: 550px) {
-    .header {
-        min-width: 320px;
-        min-height: 56px;
-        margin: 0;
-    }
+  .header {
+    min-width: 320px;
+    min-height: 56px;
+    margin: 0;
+  }
 }
