--- a/blocks/item/__image/item__image.css
+++ b/blocks/item/__image/item__image.css
@@ -4,4 +4,6 @@
   box-sizing: border-box;
   object-position: center;
   object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
