--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,10 +6,12 @@
   grid-column: 2;
   grid-row: 1;
   transition: 0.5s;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
 .popup__close:hover {
   opacity: 0.6;
-  cursor: pointer;
 }
 @media screen and (max-width: 550px) {
   .popup__close {
