--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,19 +1,17 @@
-.popup__name {
+.popup__input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  margin: 45px 0 28px;
   color: black;
   height: 27px;
   padding: 0 0 0 3px;
 }
 
 @media screen and (max-width: 550px) {
-  .popup__name {
+  .popup__input {
     line-height: 17px;
-    margin: 70px 0 26px;
     height: 30px;
   }
 }
