--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
   margin-top: 15px;
   background: none;
   transition: 0.5s;
+  cursor: pointer;
 }
 .profile__edit-button:hover {
   opacity: 0.6;
