--- a/blocks/item/__like/item__like.css
+++ b/blocks/item/__like/item__like.css
@@ -7,8 +7,10 @@
   cursor: pointer;
   border: none;
   background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .item__like:hover {
   opacity: 0.6;
-  cursor: pointer;
 }
