--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -9,6 +9,9 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
+  background-position: center;
+  background-size: cover;
+  box-sizing: border-box;
 }
 .popup__close:hover {
   opacity: 0.6;
