--- a/blocks/item/__like/item__like.css
+++ b/blocks/item/__like/item__like.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  box-sizing: border-box;
 }
 .item__like:hover {
   opacity: 0.6;
