--- a/blocks/item/__like/item__like.css
+++ b/blocks/item/__like/item__like.css
@@ -8,10 +8,10 @@
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
-  box-sizing: border-box;
+  display: block;
 }
+
 .item__like:hover {
   opacity: 0.6;
 }
