--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -9,9 +9,7 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
-  background-position: center;
-  background-size: cover;
-  box-sizing: border-box;
+  display: block;
 }
 .popup__close:hover {
   opacity: 0.6;
@@ -22,6 +20,5 @@
     justify-self: end;
     width: 20px;
     height: 20px;
-    background-size: cover;
   }
 }
