--- a/blocks/item/__image/item__image.css
+++ b/blocks/item/__image/item__image.css
@@ -6,4 +6,9 @@
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  padding: 0;
 }
