--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/item/__name/item__name.css);
 @import url(../blocks/item/__like/item__like.css);
 @import url(../blocks/item/__like/_active/item__like_active_black.css);
+@import url(../blocks/item/__trash/item__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -43,3 +44,8 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button/popup__button.css);
+
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__close-image/popup__close-image.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__name/popup__name.css);
