--- a/pages/index.css
+++ b/pages/index.css
@@ -44,8 +44,17 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__input/popup__input_type_error.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__button/popup__button_disabled.css);
+@import url(../blocks/popup/_visible/popup__error_visible.css);
+
+
 
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__close-image/popup__close-image.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__name/popup__name.css);
+/* * {
+    outline: 1px solid red;
+} */
