--- a/pages/index.css
+++ b/pages/index.css
@@ -47,7 +47,7 @@
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__button/popup__button_disabled.css);
 @import url(../blocks/popup/_visible/popup__error_visible.css);
-
+@import url(../blocks/popup/_open-image/popup_open-image.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__close-image/popup__close-image.css);
 @import url(../blocks/popup/__image/popup__image.css);
