--- a/main.css
+++ b/main.css
@@ -6,11 +6,9 @@
 .header__logo{max-height:33px}@media screen and (max-width:550px){.header__logo{height:24px;margin-left:27px;width:104px}}
 
 .profile{display:flex;justify-content:center;max-width:880px;position:relative}@media screen and (max-width:890px){.profile{align-items:center;flex-direction:column}}
-.profile__avatar-edit{background-color:transparent;border:none;display:flex;margin:0;overflow:hidden;padding:0;position:relative}
-.profile__pen-avatar{background-color:rgba(0,0,0,.8);display:flex;height:26px;left:calc(50% - 113px);opacity:0;padding:100px;position:absolute;top:calc(50% - 113px);transition:.5s;width:26px;z-index:5}.profile__pen-avatar:hover{cursor:pointer;opacity:1}
 .content__section{margin:auto;max-width:880px}@media screen and (max-width:1100px){.content__section{padding-left:70px;padding-right:70px}}@media screen and (max-width:550px){.content__section{padding-left:19px;padding-right:19px}}
 .profile__line{position:absolute;top:0}
-.profile__avatar{border-radius:50%;display:flex;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:120px}@media screen and (max-width:550px){.profile__avatar{margin:0}}
+.profile__avatar{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:120px}@media screen and (max-width:550px){.profile__avatar{margin:0}}
 .profile__info{-moz-column-gap:18px;column-gap:18px;display:grid;grid-template-columns:repeat(2,auto);grid-template-rows:repeat(2,auto);height:-moz-min-content;height:min-content;margin:22px 0 0 30px;padding-right:20px}@media screen and (max-width:890px){.profile__info{margin:50px 0 50px 30px;padding-left:28px;padding-right:0;text-align:center}}@media screen and (max-width:550px){.profile__info{-moz-column-gap:10px;column-gap:10px;margin:26px auto 34px}}
 .profile__name{font-size:42px;font-weight:500;line-height:48px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:550px){.profile__name{font-size:27px;line-height:33px}}
 .profile__activities{font-size:18px;font-weight:400;line-height:22px;margin:7px 0 0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:550px){.profile__activities{font-size:14px;line-height:17px}}
@@ -23,11 +21,9 @@
 .item__image{background-color:transparent;border:none;border-top-left-radius:10px;border-top-right-radius:10px;box-sizing:border-box;cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;overflow:hidden;padding:0;width:100%}
 .item__info{align-items:center;bottom:0;color:#000;display:flex;height:75px;left:0;margin:0;position:absolute}
 .item__name{font-size:24px;font-weight:900;line-height:29px;margin:25px auto 31px 21px;min-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:190px}
-.item__like{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;display:block;height:19px;transition:.5s;width:22px}.item__like:hover{opacity:.6}
+.item__like{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;display:block;height:19px;margin:25px 20px 31px auto;transition:.5s;width:22px}.item__like:hover{opacity:.6}
 .item__like_active_black{background-image:url(fe17a515669479b1e649.svg)}
-.item__like-block{align-items:center;display:flex;flex-direction:column;margin:0 20px 0 auto}
-.item__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:3px 0 0}
-.item__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);border:none;cursor:pointer;height:19px;margin-top:18px;position:absolute;right:14px;top:0;width:18px}.item__trash:hover{opacity:.6}
+.item__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);border:none;cursor:pointer;height:19px;margin-top:20px;position:absolute;right:20px;top:0;width:18px}.item__trash:hover{opacity:.6}
 .footer{display:flex;margin:0 200px}@media screen and (max-width:1100px){.footer{margin:0 70px}}@media screen and (max-width:550px){.footer{margin:0 19px}}
 
 .footer__text{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0}@media screen and (max-width:550px){.footer__text{font-size:14px;line-height:17px}}
@@ -43,14 +39,10 @@
 .popup__input_type_error{border-bottom:1px solid red}
 .popup__field{display:flex;flex-direction:column;position:relative}
 .popup__button_disabled{background-color:#fff;border:1px solid rgba(0,0,0,.2);color:rgba(0,0,0,.2)}
-.popup__button_type_delete-card{margin-top:32px}
 .popup__error_visible{box-sizing:border-box;color:red;display:flex;font-size:12px;font-weight:400;left:0;line-height:10px;min-height:20px;position:absolute;top:35px}
 .popup_open-image{background-color:rgba(0,0,0,.9)}
 .popup__image-container{display:flex;flex-direction:column;position:relative}
 .popup__close-image{background-color:transparent;background-image:url(ad98de32e342afafa118.svg);background-size:cover;border:none;cursor:pointer;height:32px;position:absolute;right:-40px;top:-40px;transition:.5s;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:550px){.popup__close-image{background-size:cover;height:20px;right:0;top:-36px;width:20px}}
 .popup__image{max-height:75vh;max-width:75vw;-o-object-fit:cover;object-fit:cover}
 .popup__name{font-size:12px;font-weight:400;line-height:15px;margin:10px 0 0}
-.popup__content-confirm{height:181px}
-.popup__content-refresh{height:272px}
-.item__trash-inactive{display:none}
 
